<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.quarkiverse</groupId>
        <artifactId>quarkiverse-parent</artifactId>
        <version>21</version>
    </parent>

    <groupId>io.quarkiverse.openid-ssf</groupId>
    <artifactId>quarkus-openid-ssf-parent</artifactId>
    <version>0.0.3</version>
    <packaging>pom</packaging>

    <name>Quarkus OpenID SSF - Parent</name>
    <description>Shared Signals Framework extensions for Quarkus.</description>

    <scm>
        <connection>scm:git:git@github.com:quarkiverse/quarkus-openid-ssf.git</connection>
        <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-openid-ssf.git</developerConnection>
        <url>https://github.com/quarkiverse/quarkus-openid-ssf</url>
        <tag>0.0.3</tag>
    </scm>

    <modules>
        <module>receiver</module>
    </modules>

    <properties>
        <!--
            Extension floor: the runtime + deployment artifacts must compile
            and run on Java 21 so consumer apps don't have to upgrade. The
            example apps inherit this floor.
        -->
        <maven.compiler.release>21</maven.compiler.release>

        <quarkus.version>3.35.2</quarkus.version>
        <sundrio.version>0.300.0</sundrio.version>
        <wiremock.version>3.9.1</wiremock.version>

        <!--
            Surefire's @{argLine} placeholder for plugin chaining (Jacoco etc).
            Default to empty so receiver/runtime/pom.xml's javaagent argLine
            substitution resolves cleanly when no other plugin sets it.
        -->
        <argLine />
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.wiremock</groupId>
                <artifactId>wiremock</artifactId>
                <version>${wiremock.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                    <extensions>true</extensions>
                </plugin>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-config-doc-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>io.sundr</groupId>
                <artifactId>sundr-maven-plugin</artifactId>
                <version>${sundrio.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>generate-bom</goal>
                        </goals>
                        <configuration>
                            <boms>
                                <bom>
                                    <artifactId>quarkus-openid-ssf-bom</artifactId>
                                    <name>Quarkus OpenID SSF - BOM</name>
                                    <description>Centralized dependencyManagement for the Quarkus OpenID SSF project</description>
                                    <modules>
                                        <excludes>
                                            <exclude>io.quarkiverse.openid-ssf:*-integration-tests</exclude>
                                            <exclude>io.quarkiverse.openid-ssf:*-example-*</exclude>
                                            <exclude>io.quarkiverse.openid-ssf:quarkus-openid-ssf-docs</exclude>
                                        </excludes>
                                    </modules>
                                </bom>
                            </boms>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>docs</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>!true</value>
                </property>
            </activation>
            <modules>
                <module>docs</module>
            </modules>
        </profile>
        <profile>
            <id>jdk25+</id>
            <activation>
                <jdk>[25,)</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <!-- See for example https://github.com/jboss/jboss-threads/pull/215 -->
                            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
